# apngopt

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  apngopt.cpp
7z/: 7zdeflate.cc
